--- a/acr-task.yaml
+++ b/acr-task.yaml
@@ -1,23 +1,15 @@
 version: 1.0.0-preview
 
 steps:
-- cmd: | 
-    bash -c 'echo "FROM arm32v6/alpine:3.5
-    RUN uname -a
-    RUN uname -m" > dockerfile.arm32'
-- cmd: | 
-    bash -c 'echo "FROM alpine:3.5
-    RUN uname -a
-    RUN uname -m" > dockerfile.amd64'
-- build: -t {{.Run.Registry}}/multi-arch:arm32 -f dockerfile.arm32 . 
-- build: -t {{.Run.Registry}}/multi-arch:amd64 -f dockerfile.amd64 . 
+- build: -t {{.Run.Registry}}/multi-arch:arm32-{{.Run.ID}} -f Dockerfile.arm32 . 
+- build: -t {{.Run.Registry}}/multi-arch:amd64-{{.Run.ID}} -f Dockerfile.amd64 . 
 - push: 
-    - {{.Run.Registry}}/multi-arch:amd64
-    - {{.Run.Registry}}/multi-arch:arm32
+    - {{.Run.Registry}}/multi-arch:amd64-{{.Run.ID}}
+    - {{.Run.Registry}}/multi-arch:arm32-{{.Run.ID}}
 - cmd: >
     docker manifest create
-    {{.Run.Registry}}/multi-arch:latest
-    {{.Run.Registry}}/multi-arch:arm32
-    {{.Run.Registry}}/multi-arch:amd64
+    {{.Run.Registry}}/multi-arch:{{.Run.ID}}
+    {{.Run.Registry}}/multi-arch:arm32-{{.Run.ID}}
+    {{.Run.Registry}}/multi-arch:amd64-{{.Run.ID}}
 - cmd: docker manifest push --purge {{.Run.Registry}}/multi-arch:latest
 - cmd: docker manifest inspect {{.Run.Registry}}/multi-arch:latest
